--- a/package.json
+++ b/package.json
@@ -22,8 +22,6 @@
   "dependencies": {
   },
   "devDependencies": {
-    "grunt": "~0.4.1",
-    "grunt-contrib-jshint": "~0.7.2",
-    "grunt-contrib-watch": "~0.5.3"
+    "grunt": "~0.4.1"
   }
 }
